[gd_scene load_steps=15 format=3 uid="uid://b3krfgdlkdv4h"]

[ext_resource type="Script" uid="uid://206xv6bmjypt" path="res://scripts/tasks_screen.gd" id="1_vcvit"]
[ext_resource type="Theme" uid="uid://bw27kyo8oueeq" path="res://button_theme.tres" id="2_djt1w"]
[ext_resource type="Texture2D" uid="uid://dk88yj2jbwuoc" path="res://Button Images/Achievements 2.png" id="3_w2xs7"]
[ext_resource type="Texture2D" uid="uid://bgf11slo0vge1" path="res://Button Images/Alternate_BG.jpg" id="4_djt1w"]
[ext_resource type="Texture2D" uid="uid://c8on0jd074m6a" path="res://Button Images/Pressed-Achievements 2.png" id="4_dsoln"]
[ext_resource type="Texture2D" uid="uid://chr3gf6a08nv2" path="res://Button Images/Tasks 2.png" id="5_rlwis"]
[ext_resource type="Texture2D" uid="uid://76nekutt7uwi" path="res://Button Images/Pressed-Tasks 2.png" id="6_3tg3d"]
[ext_resource type="Texture2D" uid="uid://xawc2v41co4q" path="res://Button Images/Home.png" id="7_3k5kv"]
[ext_resource type="Texture2D" uid="uid://b4lgo850tsyx6" path="res://Button Images/Pressed_Home 2.png" id="8_p5fpd"]
[ext_resource type="Texture2D" uid="uid://ctulusf5ooj22" path="res://Button Images/Battles 2.png" id="9_fc5so"]
[ext_resource type="Texture2D" uid="uid://c24qwt8so1e34" path="res://Button Images/Pressed-Battles 2.png" id="10_vee8a"]
[ext_resource type="Texture2D" uid="uid://dlyofuuuo7gec" path="res://Button Images/Creatures 3.png" id="11_8tljw"]
[ext_resource type="Texture2D" uid="uid://d3kwi72xg4vbe" path="res://Button Images/Pressed-Creatures 3.png" id="12_f83k6"]
[ext_resource type="PackedScene" uid="uid://ds6qo2tyi4voi" path="res://Objects/task_system.tscn" id="14_w2xs7"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_vcvit")

[node name="Goals Button" type="TextureButton" parent="."]
offset_top = 1136.0
offset_right = 144.0
offset_bottom = 1280.0
theme = ExtResource("2_djt1w")
texture_normal = ExtResource("3_w2xs7")
texture_pressed = ExtResource("4_dsoln")

[node name="Tasks Button" type="TextureButton" parent="."]
offset_left = 144.0
offset_top = 1136.0
offset_right = 288.0
offset_bottom = 1280.0
theme = ExtResource("2_djt1w")
texture_normal = ExtResource("5_rlwis")
texture_pressed = ExtResource("6_3tg3d")

[node name="Home Button" type="TextureButton" parent="."]
offset_left = 288.0
offset_top = 1136.0
offset_right = 432.0
offset_bottom = 1280.0
theme = ExtResource("2_djt1w")
texture_normal = ExtResource("7_3k5kv")
texture_pressed = ExtResource("8_p5fpd")

[node name="Battle Button" type="TextureButton" parent="."]
offset_left = 432.0
offset_top = 1136.0
offset_right = 576.0
offset_bottom = 1280.0
theme = ExtResource("2_djt1w")
texture_normal = ExtResource("9_fc5so")
texture_pressed = ExtResource("10_vee8a")

[node name="Creatures Button" type="TextureButton" parent="."]
offset_left = 576.0
offset_top = 1136.0
offset_right = 720.0
offset_bottom = 1280.0
theme = ExtResource("2_djt1w")
texture_normal = ExtResource("11_8tljw")
texture_pressed = ExtResource("12_f83k6")

[node name="AlternateBg" type="Sprite2D" parent="."]
z_index = -2
position = Vector2(360, 675.5)
scale = Vector2(1.0027778, 1.0523437)
texture = ExtResource("4_djt1w")

[node name="TaskSystem" parent="." instance=ExtResource("14_w2xs7")]

[connection signal="pressed" from="Goals Button" to="." method="_on_goals_button_pressed"]
[connection signal="pressed" from="Tasks Button" to="." method="_on_tasks_button_pressed"]
[connection signal="pressed" from="Home Button" to="." method="_on_home_button_pressed"]
[connection signal="pressed" from="Battle Button" to="." method="_on_battle_button_pressed"]
[connection signal="pressed" from="Creatures Button" to="." method="_on_creatures_button_pressed"]
