[gd_scene load_steps=6 format=3 uid="uid://b3krfgdlkdv4h"]

[ext_resource type="Script" uid="uid://206xv6bmjypt" path="res://scripts/tasks_screen.gd" id="1_b5bdm"]
[ext_resource type="Texture2D" uid="uid://3xulbvt7dwor" path="res://TaskBG.png" id="2_b5bdm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b5bdm"]
bg_color = Color(0.41024032, 0.41024032, 0.4102402, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ktmxl"]
bg_color = Color(0, 1, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dsgs6"]
bg_color = Color(0.8026162, 0.80261624, 0.80261606, 1)

[node name="UI" type="Node2D"]
script = ExtResource("1_b5bdm")

[node name="BackGround" type="TextureRect" parent="."]
offset_left = -3.0
offset_top = -1.0
offset_right = 717.0
offset_bottom = 1279.0
texture = ExtResource("2_b5bdm")
metadata/_edit_lock_ = true

[node name="Goals Button" type="Button" parent="."]
offset_top = 1136.0
offset_right = 144.0
offset_bottom = 1280.0
text = "Goals"
metadata/_edit_lock_ = true

[node name="Tasks Button" type="Button" parent="."]
offset_left = 144.0
offset_top = 1136.0
offset_right = 288.0
offset_bottom = 1280.0
text = "Tasks"
metadata/_edit_lock_ = true

[node name="Home Button" type="Button" parent="."]
offset_left = 288.0
offset_top = 1136.0
offset_right = 432.0
offset_bottom = 1280.0
text = "Home"
metadata/_edit_lock_ = true

[node name="Battle Button" type="Button" parent="."]
offset_left = 432.0
offset_top = 1136.0
offset_right = 576.0
offset_bottom = 1280.0
text = "Battle"
metadata/_edit_lock_ = true

[node name="Creatures Button" type="Button" parent="."]
offset_left = 576.0
offset_top = 1136.0
offset_right = 720.0
offset_bottom = 1280.0
text = "Creatures"
metadata/_edit_lock_ = true

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 720.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 6.0
offset_right = 2.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2

[node name="ItemList" type="ItemList" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(720, 1000)
layout_mode = 2
theme_override_font_sizes/font_size = 25

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
expand_to_text_length = true

[node name="AddButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_b5bdm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ktmxl")
theme_override_styles/hover = SubResource("StyleBoxFlat_dsgs6")
text = "Add"

[node name="DeleteButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Delete"

[connection signal="pressed" from="Goals Button" to="." method="_on_goals_button_pressed"]
[connection signal="pressed" from="Tasks Button" to="." method="_on_tasks_button_pressed"]
[connection signal="pressed" from="Home Button" to="." method="_on_home_button_pressed"]
[connection signal="pressed" from="Battle Button" to="." method="_on_battle_button_pressed"]
[connection signal="pressed" from="Creatures Button" to="." method="_on_creatures_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/AddButton" to="." method="_on_add_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
